修改打包脚本